<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202124"
    tools:context=".login.ForgotPasswordPage">

    <include
        android:id="@+id/tbTempTopBar"
        layout="@layout/top_app_bar_noline" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round_rectangle"
        android:text="Reset password"
        android:textAllCaps="false"
        android:textColor="@color/baseBlack"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilForgotPasswordEmail"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password"
        android:textColor="@color/baseGreen"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbTempTopBar"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/tvForgotPasswordMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter your registered email address."
        android:textColor="@color/baseWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
        app:layout_constraintVertical_bias="0.03" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilForgotPasswordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordMsg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiletForgotPasswordEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Email address"
            android:maxLength="320"
            android:inputType="textEmailAddress"
            android:textColor="@color/baseWhite"
            android:textColorHint="@color/baseGrey" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>