<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_logo"
    tools:context=".login.MainActivity">

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round_rectangle"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:elevation="8dp"
        android:text="Sign in"
        android:textAllCaps="false"
        android:textColor="#202124"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <Button
        android:id="@+id/btnNeedAAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edge_button_white"
        android:elevation="8dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="Sign up"
        android:textAllCaps="false"
        android:textColor="#202124"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />


</androidx.constraintlayout.widget.ConstraintLayout>