...

            <TextView
                android:id="@+id/tvPostFirstHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Display Information"
                android:textColor="@color/baseGreen"
                android:textSize="18sp"
...

            <ImageView
                android:id="@+id/ivPostDisplayImage"
                android:layout_width="116dp"
                android:layout_height="120dp"
...

            <ImageButton
                android:id="@+id/btnRemoveImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDisplayTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvPostSecondHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:text="Activity Information"
                android:textColor="@color/baseGreen"
                android:textSize="18sp"
...

            <TextView
                android:id="@+id/tvTypeActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="Type of Activity:"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
...

            <Spinner
                android:id="@+id/spTypeActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginLeft="25dp"
                android:layout_marginTop="35dp"
                android:text="Location:"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
...

            <TextView
                android:id="@+id/etLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                android:textSize="9sp"
                android:padding="2dp"
                app:layout_constraintEnd_toStartOf="@+id/post_activity_open_maps"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
...

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:text="Time and Date:"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
...

            <TextView
                android:id="@+id/tvActivityTimeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Actual activity:"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
...

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/btnSetTime"
                android:layout_width="18dp"
                android:layout_height="18dp"
...

            <Button
                android:id="@+id/btnSetDate"
                android:layout_width="18dp"
                android:layout_height="18dp"
...

            <TextView
                android:id="@+id/tvConfirmationDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Confirmation deadline:"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
...

            <TextView
                android:id="@+id/tvDeadlineTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/btnSetTimeDeadline"
                android:layout_width="18dp"
                android:layout_height="18dp"
...

            <TextView
                android:id="@+id/tvDeadlineDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvNumberParticipants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginLeft="25dp"
                android:layout_marginTop="35dp"
                android:text="Number of Participants:"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
...

            <Button
                android:id="@+id/btnSetDateDeadline"
                android:layout_width="18dp"
                android:layout_height="18dp"
...

            <TextView
                android:id="@+id/tvMinParticipants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Minimum:"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
...

            <EditText
                android:id="@+id/etMinParticipants"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvMaxParticipants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Maximum:"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
...

            <EditText
                android:id="@+id/etMaxParticipants"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginLeft="25dp"
                android:layout_marginTop="35dp"
                android:text="Additional Details:"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
...

            <EditText
                android:id="@+id/etAdditionalDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
